src/test/ui/generic-associated-types/projection-bound-cycle-generic.stderr
error[E0275]: overflow evaluating the requirement `<T as Foo>::Item: Sized`
  --> $DIR/projection-bound-cycle-generic.rs:42:18
   |
LL |     type Assoc = OnlySized<<T as Foo>::Item>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required by a bound in `OnlySized`
  --> $DIR/projection-bound-cycle-generic.rs:26:18
   |
LL | struct OnlySized<T> where T: Sized { f: T }
   |                  ^ required by this bound in `OnlySized`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
